--- a/prepros.config
+++ b/prepros.config
@@ -628,10 +628,16 @@
         ],
         "output": {
           "extension": ".js",
-          "type": "SOURCE_RELATIVE",
+          "type": "REPLACE_SEGMENTS",
           "relativePath": "",
           "suffix": "-dist",
-          "alwaysSuffix": false
+          "alwaysSuffix": false,
+          "segments": [
+            {
+              "segment": "javascript",
+              "replaceWith": "js"
+            }
+          ]
         }
       },
       "stylus": {
@@ -909,6 +915,29 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "#source/js/main.js",
+        "config": {
+          "tasks": {
+            "minify-js": {
+              "enable": false
+            }
+          },
+          "customOutput": "#source/js/main.js",
+          "autoCompile": true
+        }
+      },
+      {
+        "file": "#source/scss/style.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      }
+    ]
   }
 }
