собираюсь все испортить сделав scss-дерево

--- a/prepros.config
+++ b/prepros.config
@@ -931,11 +931,7 @@
       {
         "file": "#source/scss/style.scss",
         "config": {
-          "tasks": {
-            "minify-css": {
-              "enable": true
-            }
-          }
+          "customOutput": "css/style1.css"
         }
       }
     ]
